# temporal-scraper

./: .gitignore  Makefile  README.md  example_activities.py  example_run_worker.py  example_run_workflow.py  example_workflows.py  pyproject.toml  scraper_activities.py  scraper_model.py  scraper_run_worker.py  scraper_run_workflow.py  scraper_workflows.py
src/: __init__.py  __main__.py  activities.py  model.py  run_worker.py  run_workflow.py  workflows.py
